# MongoDB-Training

./: CMakeLists.txt  README.md  films_db.films.json  main.cpp
